Sonar issues fix and added more tests